test_cases/analyzer/type_errors/assignment_mismatch.ign
// Test: Type mismatch in assignment should produce A0045

function main(): void {
    let x: i32 = "hello";  // Error: Cannot assign string to i32
    return;
}
